// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/components/svgs/misc Test Suite Download Test Suite matches snapshot 1`] = `
<svg
  className=""
  height={32}
  viewBox="0 0 20 20"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
  />
</svg>
`;

exports[`@/components/svgs/misc Test Suite PoI Test Suite matches snapshot 1`] = `
<svg
  className=""
  height={32}
  viewBox="0 0 20 20"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
  />
</svg>
`;
